Integrate user authentication via `UsuarioApi` interface
Replaced direct repository calls with `UsuarioApi` for user-related operations to centralize authentication handling. Updated related services, adapters, and DTOs to accommodate this change and ensure proper user-based logic. Adjusted other minor code improvements like stream usage and package structure alignment.